# console_agent_python

./: .gitignore  LICENSE  README.md  docs.md  pyproject.toml
.github/workflows/: publish-pypi.yml
console_agent/: __init__.py  core.py  types.py
console_agent/personas/: __init__.py  architect.py  debugger.py  general.py  security.py
console_agent/providers/: google.py  ollama.py
console_agent/tools/: __init__.py  code_execution.py  file_analysis.py  search.py  url_context.py
console_agent/utils/: __init__.py  anonymize.py  budget.py  caller_file.py  format.py  rate_limit.py
examples/: async_usage.py  basic.py  ollama_usage.py  personas.py  structured_output.py  tools_usage.py
memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
tests/e2e/: test_agent_real.py  test_caller_source.py  test_ollama_real.py
tests/e2e/fixtures/: billing.py
tests/integration/: test_agent_dryrun.py
tests/unit/: test_agent_config.py  test_anonymize.py  test_budget.py  test_caller_file.py  test_ollama_provider.py  test_personas.py  test_rate_limit.py  test_tools.py
