[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "console-agent"
version = "1.2.1"
description = "Drop agent() anywhere in your code to execute agentic workflows — as easy as print()"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Console Agent", email = "console.agent.npm@gmail.com" },
]
keywords = [
    "agent",
    "ai",
    "console",
    "gemini",
    "google",
    "agentic",
    "debugging",
    "security",
    "llm",
    "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agno>=1.0.0",
    "google-genai>=1.0.0",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://console-agent.github.io"
Repository = "https://github.com/console-agent/console-agent-python"
Documentation = "https://console-agent.github.io"
"Bug Tracker" = "https://github.com/console-agent/console-agent-python/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
